feat: corazón de partículas con glow + interacción

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <canvas id="heart"></canvas>
 
   <header class="title">
-    <h1>feliz 8 meses,<br><span>martineishon</span></h1>
-    <p class="hint">tocá o hacé click para un latido ✨</p>
+    <h1>Feliz 8 meses,<br><span>Martineishon</span></h1>
+    <p class="hint">Tocá mi corazón y siente su latido ✨</p>
   </header>
 
   <script src="./main.js"></script>
